@@ -9,7 +9,6 @@ For the coming release:
 - Drop or update zeolite archive
 - Configuration files
 - More intuitive option names?
-- Round TD10 to nearest integer
 
 =====================================================
 
